screenshots/template.yaml
Parameters:
  EnvironmentName:
    Description: Select the environment deployment target.
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - test
      - prod
Conditions:
  IsDev: !Equals [!Ref EnvironmentName, "dev"]
  IsTest: !Equals [!Ref EnvironmentName, "test"]
  IsProd: !Equals [!Ref EnvironmentName, "prod"]

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !If [IsDev, "10.0.0.0/16", !If [IsTest, "10.1.0.0/16", "10.2.0.0/16"]]
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-vpc"

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !If [IsDev, "10.0.1.0/24", !If [IsTest, "10.1.1.0/24", "10.2.1.0/24"]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-public-subnet"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-igw"

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-public-rt"

  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "Allow HTTP and SSH for ${EnvironmentName}"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.micro"
      ImageId: ami-0685f8dd865c8e389 
      SubnetId: !Ref Subnet
      SecurityGroupIds:
        - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-server"

Outputs:
  VpcId:
    Description: The ID of the VPC
    Value: !Ref VPC
  PublicIp:
    Description: Public IP of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
  Environment:
    Description: The environment this stack belongs to
    Value: !Ref EnvironmentName
